--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,6 @@
+/*#region Reset and common styles*/
 body {
+  background-color: #ffffff;
   font-family: "Roboto", sans-serif;
   font-size: 16px;
   line-height: 1.5;
@@ -21,29 +23,6 @@ button {
   cursor: pointer;
 }
 
-.visually-hidden {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  border: 0;
-  padding: 0;
-
-  white-space: nowrap;
-  clip-path: inset(100%);
-  clip: rect(0 0 0 0);
-  overflow: hidden;
-}
-
-.section-title {
-  font-size: 36px;
-  line-height: 1.11;
-  letter-spacing: 0.02em;
-  text-align: center;
-  color: #2e2f42;
-}
-
-/*#region Header*/
 .logo {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
@@ -51,11 +30,22 @@ button {
   line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: #2e2f42;
+  color: #4d5ae5;
 }
 
+.section-title {
+  font-size: 36px;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  text-align: center;
+  text-transform: capitalize;
+  color: #2e2f42;
+}
+/*#endregion */
+
+/*#region Header*/
 .logo-accent {
-  color: #4d5ae5;
+  color: #2e2f42;
 }
 
 .header-nav-link {
@@ -64,9 +54,19 @@ button {
   color: #2e2f42;
 }
 
+.header-nav-link:hover,
+.header-nav-link:focus {
+  color: #404bbf;
+}
+
 .header-contacts-link {
   letter-spacing: 0.02em;
   color: #434455;
+}
+
+.header-contacts-link:hover,
+.header-contacts-link:focus {
+  color: #404bbf;
 }
 /*#endregion */
 
@@ -86,11 +86,15 @@ button {
 
 .hero-button {
   background-color: #4d5ae5;
-
-  font-family: "Roboto", sans-serif;
   font-weight: 500;
+  line-height: 1.5;
   letter-spacing: 0.04em;
   color: #ffffff;
+}
+
+.hero-button:hover,
+.hero-button:focus {
+  background-color: #404bbf;
 }
 /*#endregion */
 
@@ -114,6 +118,7 @@ button {
 }
 
 .team-card {
+  background-color: #ffffff;
   text-align: center;
 }
 
@@ -148,7 +153,7 @@ button {
   background-color: #2e2f42;
 }
 
-.footer-logo {
+.footer .logo-accent {
   color: #f4f4fd;
 }
 
